--- a/style.css
+++ b/style.css
@@ -1,8 +1,41 @@
+#main-content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.rocket-units {
+  /* border: 3px solid blue; */
+  color: blue;
+  margin: 10px;
+  padding: 10px;
+  /* width: 300px; */
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .title {
   font-weight: bold;
+  text-transform: uppercase;
+}
+
+.img-div {
+  border: 3px solid blue;
+  width: 200px;
+  height: 150px;
+  padding: 15px;
 }
 
 img {
-  width: 300px;
-  height: 200px;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
+  transition: 0.5s;
 }
+
+img:hover {
+  opacity: 1;
+  transform: rotate(2deg);
+  box-shadow: 4px 4px 8px grey;
+}
+
