--- a/style-vue.css
+++ b/style-vue.css
@@ -1,4 +1,38 @@
-img {
-  width: 300px;
-  height: 200px;
+@font-face {
+  font-family: 'Nasa';
+  src: URL('Nasa.ttf') format('truetype');
 }
+       
+* {
+  font-family: 'Nasa';
+}
+
+body {
+  background-image: url("1.png");
+  background-size: cover;
+  background-repeat: no-repeat; 
+}
+
+#app {
+  text-align: center;
+}
+
+.rocket-units {
+  display: inline-block;
+  vertical-align: top;
+  width: 300px;
+  color: white; 
+  margin: 20px;
+  padding: 10px;
+}
+
+img {
+  border: 10px solid white;
+  border-bottom: 30px solid white;
+  width: 240px;
+  height: 160px;
+}
+
+
+
+
