--- a/style-vue.css
+++ b/style-vue.css
@@ -34,11 +34,9 @@ img, .icon {
 }
 
 .icon {
-  background-image: url("rocket.svg");
-  background-size: cover;
-  background-repeat: no-repeat; 
-  background-color: white;
-  background-size: cover;
+  background: url("rocket.svg") center no-repeat;
+  background-size: contain;
+  background-color: white; 
 }
 
 
